--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "compilerOptions": {
         "strict": true,
         "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
         "lib": [
             "dom",
             "es2015"
